Initial Document commit

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kyle Han Personal Website
-#baseurl: ""
+baseurl: ""
 url: "https://kyleh2420.github.io"
 description: Kyle Han Personal Website
 
