--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kyle Han Personal Website
 baseurl: ""
 url: "https://kyleh2420.github.io"
-description: Kyle Han Personal Website
+description: Kyle Han
 
 # Build settings
 search_enabled: true
