--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kyle Han
 baseurl: ""
 url: "https://kyleh2420.github.io"
-description: Kyle Han
+description: Kyle Han's Personal Website
 
 # Build settings
 search_enabled: true
